--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watchAll --verbose",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
@@ -35,7 +36,8 @@
     "typescript": "^3.6.2"
   },
   "dependencies": {
-    "@types/jest": "^24.0.18"
+    "@types/jest": "^24.0.18",
+    "bignumber.js": "^9.0.0"
   },
   "files": [
     "dist/**/*"
