--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll --verbose",
-    "build": "tsc",
+    "build": "npm run lint:fix && tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
+    "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
