--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015"],
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
